fixed spacing issue with about page. improved wording.

--- a/src/App.css
+++ b/src/App.css
@@ -35,13 +35,17 @@
   font-size: calc(100% + 1pt);
 }
 
+html {
+  scrollbar-gutter: stable;
+  overflow-y: scroll;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
   background: #f9e8c9;
   color: #3a2317;
   font-family: "Times New Roman", Times, serif;
-  scrollbar-gutter: stable;
 }
 
 #root {
